jsを別ファイルに分ける #17

--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ConsonantLockLanguage</title>
+    <script src="/static/js/main.js"></script>
 </head>
 <body>
     <div>
@@ -36,28 +37,3 @@
     </div>
 </body>
 </html>
-<script>
-async function convertButton() {
-    const inputString = document.getElementById("input_string").value;
-    const lineType = document.getElementById("line_type").value;
-
-    try {
-        // APIリクエストのURLを作成
-        const response = await fetch(`/api/getColockLanguage?input_string=${encodeURIComponent(inputString)}&line_type=${encodeURIComponent(lineType)}`);
-        
-        // エラーチェック
-        if (!response.ok) {
-          throw new Error('APIリクエストに失敗しました');
-        }
-
-        // レスポンスをJSONとして解析
-        const data = await response.json();
-
-        // 結果を表示
-        document.getElementById("result").textContent = data.result;
-    } catch (error) {
-        console.error("エラー:", error);
-        document.getElementById("result").textContent = "エラーが発生しました";
-    }
-}
-</script>
