複数行入力できるように修正

--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ConsonantLockLanguage</title>
+    <title>Consonant Lock Language</title>
 
     <!-- Materialize CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
@@ -47,11 +47,10 @@
 </head>
 <body>
     <div class="container">
-        <h4>ConsonantLockLanguage</h4>
+        <h4>Consonant Lock Language</h4>
         
         <div class="input-field">
-            <label for="input_string">文字を入力</label>
-            <input type="text" id="input_string" class="validate">
+            <textarea type="text" id="input_string" class="validate" placeholder="変換したい文字を入力"></textarea>
         </div>
 
         <div class="input-field">
