disabled時の色を変更。変換結果の編集を無効化

--- a/static/css/customize.css
+++ b/static/css/customize.css
@@ -28,6 +28,13 @@ rt {
     margin-top: 20px;
     background-color: crimson !important;
 }
+.btn.disabled {
+    background-color: #ffbdbd !important;
+    color: #fff !important;
+}
+
+
+
 textarea {
     width: 100%;
     height: 150px;
