--- a/views/index.html
+++ b/views/index.html
@@ -54,7 +54,7 @@
                 <button id="convert_btn" class="btn waves-effect waves-light disabled" onclick="convertButton()">変換</button>
             </div>
         </div>
-        <textarea id="result" class="section" placeholder="変換結果がここに表示されます..."></textarea>
+        <textarea id="result" class="section" placeholder="変換結果がここに表示されます..." readonly></textarea>
     </div>
 
     <!-- Materialize JS -->
