--- a/static/css/customize.css
+++ b/static/css/customize.css
@@ -61,3 +61,20 @@ p {
     font-style: normal;
     text-align: center;
 }
+
+.textarea-container {
+    position: relative;
+    width: 100%;
+}
+
+#result {
+    width: 100%;
+    padding-right: 50px;
+}
+
+#copyButton {
+    position: absolute;
+    cursor: pointer;
+    top: 10px;
+    right: 10px;
+}
